@startuml
package br.univille.projfabsoftlavanderia {
    class Cliente {
        - long id
        - String nome
        - String telefone
        - String codigo
        - List<Roupa> roupas
        - Pagamento pagamento
        --
        + long getId()
        + void setId(long id)
        + String getNome()
        + void setNome(String nome)
        + String getTelefone()
        + void setTelefone(String telefone)
        + String getCodigo()
        + void setCodigo(String codigo)
        + List<Roupa> getRoupas()
        + void setRoupas(List<Roupa> roupas)
        + Pagamento getPagamento()
        + void setPagamento(Pagamento pagamento)
    }

    class Roupa {
        - long id
        - String tipo
        - double preco
        --
        + long getId()
        + void setId(long id)
        + String getTipo()
        + void setTipo(String tipo)
        + double getPreco()
        + void setPreco(double preco)
    }

    class Pagamento {
        - long id
        - boolean pago
        - String formaPagamento
        --
        + long getId()
        + void setId(long id)
        + boolean isPago()
        + void setPago(boolean pago)
        + String getFormaPagamento()
        + void setFormaPagamento(String formaPagamento)
    }

    class Comanda {
        - long id
        - LocalDateTime dataEntrada
        - LocalDateTime dataRetirada
        --
        + long getId()
        + void setId(long id)
        + LocalDateTime getDataEntrada()
        + void setDataEntrada(LocalDateTime dataEntrada)
        + LocalDateTime getDataRetirada()
        + void setDataRetirada(LocalDateTime dataRetirada)
    }

    class Servico {
        - long id
        - String descricao
        - double preco
        --
        + long getId()
        + void setId(long id)
        + String getDescricao()
        + void setDescricao(String descricao)
        + double getPreco()
        + void setPreco(double preco)
    }

    Cliente "1" --> "*" Roupa
    Cliente "1" --> "1" Pagamento
    Cliente "1" --> "*" Comanda
    Roupa "1" --> "*" Servico
}
@enduml